filter button z-index fixed

--- a/sass/modules/_Form2.module.scss
+++ b/sass/modules/_Form2.module.scss
@@ -29,7 +29,7 @@
     display: flex;
     justify-content: space-between;
     gap: 2rem;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
     align-items: center;
     label {
         font-size: 1.25rem;
