--- a/sass/modules/_General.module.scss
+++ b/sass/modules/_General.module.scss
@@ -93,7 +93,7 @@ button {
         transform: translate(-2px, -2px);
         filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.5));
         box-shadow: 2px 2px 0px #b62f00;
-        text-shadow: 1px 1px 2px #b62f00;
+        text-shadow: 1px 1px 1px #b62f00;
         transition: all 0.5s;
     }
 }
@@ -286,6 +286,7 @@ input {
         background-color: $accent-color-hover;
         box-shadow: 2px 2px 0px #b62f00;
         transition: all 0.5s;
+        text-shadow: 1.5px 1.5px 1.5px #b62f00;
     }
     & a {
         color: white;
